<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="@dimen/dimen_128"
        android:layout_height="@dimen/dimen_128"
        android:layout_marginTop="@dimen/dimen_32"
        android:src="@drawable/ic_user"
        app:civ_border_color="@color/black"
        app:civ_border_width="@dimen/dimen_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnEditPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@drawable/btn_verify"
        android:paddingHorizontal="@dimen/dimen_20"
        android:text="@string/BTN_CHANGE_PHOTO"
        app:layout_constraintEnd_toEndOf="@+id/img_profile"
        app:layout_constraintStart_toStartOf="@+id/img_profile"
        app:layout_constraintTop_toBottomOf="@+id/img_profile" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnsetGps"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16"
        android:background="@drawable/btn_verify"
        android:paddingHorizontal="@dimen/dimen_20"
        android:text="@string/BTN_ENABLE_GPS"
        app:layout_constraintEnd_toEndOf="@+id/img_profile"
        app:layout_constraintStart_toStartOf="@+id/img_profile"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

    <EditText
        android:id="@+id/edName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:maxLength="25"
        android:inputType="textPersonName"
        android:hint="@string/HINT_NAME"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblName" />

    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32"
        android:text="@string/TITLE_USERNAME"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/TEXT_22"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditPhoto" />

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32"
        android:paddingHorizontal="@dimen/dimen_54"
        android:background="@drawable/btn_verify"
        android:text="@string/BTN_REGISTER"
        app:layout_constraintEnd_toEndOf="@+id/edName"
        app:layout_constraintStart_toStartOf="@+id/edName"
        app:layout_constraintTop_toBottomOf="@+id/edName"
        app:spinning_bar_padding="6dp"
        />

    <TextView
        android:id="@+id/lblDescription"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_64"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginEnd="@dimen/dimen_64"
        android:text="@string/register_help"
        android:textAlignment="center"
        android:textSize="@dimen/TEXT_20"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsetGps" />


</androidx.constraintlayout.widget.ConstraintLayout>