<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/mainFragmentDestination">

    <fragment
        android:id="@+id/sendOTPDestination"
        android:name="com.victoryil.wellder.ui.otp.SendOTPFragment"
        android:label="send_otp_fragment"
        tools:layout="@layout/send_otp_fragment" >
        <action
            android:id="@+id/action_sendToVerify"
            app:destination="@id/verifyOTPDestination" />
    </fragment>
    <fragment
        android:id="@+id/verifyOTPDestination"
        android:name="com.victoryil.wellder.ui.otp.VerifyOTPFragment"
        android:label="@string/TITLE_VERIFICATION"
        tools:layout="@layout/verify_otp_fragment" >
        <argument
            android:name="verficationId"
            app:argType="string" />
        <action
            android:id="@+id/action_verifyOTPDestination_to_registerFragment"
            app:destination="@id/registerDestination" />
    </fragment>
    <fragment
        android:id="@+id/mainFragmentDestination"
        android:name="com.victoryil.wellder.ui.main.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/main_fragment">
        <action
            android:id="@+id/action_main2chat"
            app:destination="@id/chatFragmentDestination"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_enter_anim"
            app:popExitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_mainFragmentDestination_to_searchFragment"
            app:destination="@id/searchDestination"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_enter_anim"
            app:popExitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/settingsFragDestination"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatsFragmentDestination"
        android:name="com.victoryil.wellder.ui.main.chats.ChatsFragment"
        android:label="chats_fragment"
        tools:layout="@layout/chats_fragment" />
    <fragment
        android:id="@+id/registerDestination"
        android:name="com.victoryil.wellder.ui.register.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/register_fragment" />
    <fragment
        android:id="@+id/friendsFragment"
        android:name="com.victoryil.wellder.ui.main.friends.FriendsFragment"
        android:label="friends_fragment"
        tools:layout="@layout/friends_fragment" />
    <fragment
        android:id="@+id/chatFragmentDestination"
        android:name="com.victoryil.wellder.ui.chat.ChatFragment"
        tools:layout="@layout/chat_fragment">
        <argument
            android:name="uid"
            app:argType="string" />
        <action
            android:id="@+id/action_chat2ImageViewer"
            app:destination="@id/imageViewerDestination"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/imageViewerDestination"
        android:name="com.victoryil.wellder.ui.utils.ImageViewerFragment"
        tools:layout="@layout/fragment_image_viewer">
        <argument
            android:name="url"
            android:defaultValue='""'
            app:argType="string" />
        <argument android:name="name"
            app:argType="string"
            android:defaultValue="Imagen" />
    </fragment>
    <fragment
        android:id="@+id/searchDestination"
        android:name="com.victoryil.wellder.ui.main.search.SearchFragment"
        android:label="Busqueda"
        tools:layout="@layout/search_fragment">
        <action
            android:id="@+id/action_searchDestination_to_addFriendDestination"
            app:destination="@id/addFriendDestination" />
        <action
            android:id="@+id/search2Chat"
            app:destination="@id/chatFragmentDestination" />
    </fragment>
    <fragment
        android:id="@+id/addFriendDestination"
        android:name="com.victoryil.wellder.ui.main.search.addFriend.AddFriendFragment"
        android:label="Add User"
        tools:layout="@layout/add_friend_fragment" >
        <action
            android:id="@+id/action_addFriendDestination_to_QRScannerFragment"
            app:destination="@id/QRScannerDestination" />
    </fragment>
    <fragment
        android:id="@+id/QRScannerDestination"
        android:name="com.victoryil.wellder.ui.main.search.addFriend.QRScannerFragment"
        android:label="QRScannerFragment" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.victoryil.wellder.ui.settings.SettingsFragment"
        android:label="@string/TITLE_SETTING">
        <action
            android:id="@+id/action_settingsFragment_to_profileSettings"
            app:destination="@id/profileSettingsDestination" />
        <action
            android:id="@+id/action_settingsFragment_to_accessibilitySetting"
            app:destination="@id/accessibilitySettingDestination" />
        <action
            android:id="@+id/action_settingsFragment_to_blockUserSettings"
            app:destination="@id/blockUserDestination" />
    </fragment>
    <fragment
        android:id="@+id/profileSettingsDestination"
        android:name="com.victoryil.wellder.ui.settings.ProfileSettings"
        android:label="@string/LABEL_PROFILE" />
    <fragment
        android:id="@+id/accessibilitySettingDestination"
        android:name="com.victoryil.wellder.ui.settings.AccessibilitySetting"
        android:label="@string/TITLE_SETTING_ACCESIBILITY" />
    <fragment
        android:id="@+id/blockUserDestination"
        android:name="com.victoryil.wellder.ui.settings.BlockUserSettings"
        android:label="@string/LABEL_BLOCK_USERS"
        tools:layout="@layout/block_user_settings" />
</navigation>